# mast-lint

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
docs/: design.md  mast_dataset.md  pause-2026-07-19.md
evals/: README.md  adjudicate.py  adjudication.md  adjudication_lever1.md  contamination_ceiling.md  held_out.md  held_out_appworld_report.json  held_out_appworld_segmented_report.json  held_out_gaia_report.json  held_out_gaia_segmented_report.json  kappa_report.json  raw_findings.json  raw_held_out_all_segmented.json  raw_held_out_appworld.json  raw_held_out_appworld_segmented.json  raw_held_out_combined.json  raw_held_out_gaia.json  raw_held_out_gaia_segmented.json  raw_lever1.run1.json  raw_lever1.run2.json  raw_lever1.run3.json  raw_lever1.run4.json  raw_lever1.run5.json
evals/dogfood/: adjudication.md  adjudication_batch2.md  adjudication_batch3.md  adjudication_batch4.md  adjudication_batch5.md  gold_labels.json  gold_labels.md  gold_labels_batch2.json  gold_labels_batch2.md  gold_labels_batch3.json  gold_labels_batch3.md  gold_labels_batch4.json  gold_labels_batch4.md  gold_labels_batch5.json  gold_labels_batch5.md  judge_report.json  judge_report_batch2.json  judge_report_batch2_adjudicated.json  judge_report_batch3.json  judge_report_batch3_adjudicated.json  (+46 more)
examples/: trace.example.json
prompts/: judge_system.md
scripts/: fetch_mast_data.py
taxonomy/: taxonomy.yaml
tests/: test_cli.py  test_evals.py  test_judge.py  test_mast_adapter.py  test_report.py  test_schema.py  test_segment.py
(+12 files in other folders)
